# matapos

./: .gitignore  CMakeLists.txt  CartScreen.cpp  CartScreen.h  Doxyfile  README.md  WelcomeScreen.cpp  WelcomeScreen.h  index.html  main.cpp  window.cpp  window.h
app/: CMakeLists.txt
app/src/: main.cpp
docs/: Manager Classes  database.db
examples/: CMakeLists.txt
include/: CMakeLists.txt
include/barcodereader/: barcodereader.h
include/camera/: camera.h
include/guiheaderfiles/: WelcomeScreen.h  adminaccesswindow.h  customer.h  customerdialog.h  customerinfo.h  database.h  mainwindow.h  product.h  window.h
include/simplecameralib/: Camera_reader.h  printhello.h
lib/: CMakeLists.txt
lib/barcodereader/: CMakeLists.txt
lib/barcodereader/include/: barcodereader.h  barcodereadercallback.h
lib/barcodereader/src/: barcodereader.cpp
lib/barcodereader/test/: CMakeLists.txt
lib/camera/: CMakeLists.txt
lib/camera/include/: camera.h
lib/camera/src/: camera.cpp
lib/camera/test/: CMakeLists.txt
lib/database/: CMakeLists.txt
lib/database/include/: database.h  databasecallback.h
lib/database/src/: database.cpp  matapos_db.db
lib/database/test/: CMakeLists.txt  database_test.cpp
lib/entity/: CMakeLists.txt
lib/entity/include/: cart.h  cartitem.h  customer.h  stock.h
lib/keypad/: CMakeLists.txt
lib/keypad/include/: keypad.h  numpad.h
lib/keypad/src/: keypad.cpp  keypadExample.cpp  numpad.cpp
lib/loadcell/src/: LoadCell.cpp  numpad.cpp
lib/loadcell/test/: CMakeLists.txt
lib/window/: CMakeLists.txt
lib/window/include/: CartScreen.h  PaymentScreen.h  WelcomeScreen.h  window.h
lib/window/src/: CartScreen.cpp  PaymentScreen.cpp  WelcomeScreen.cpp  window.cpp
lib/window/test/: CMakeLists.txt
src/: CMakeLists.txt  LoadCell.h  LoadCellExample.cpp  WelcomeScreen.cpp  adminaccesswindow.cpp  barcodereader.cpp  camera.cpp  customer.cpp  customerdialog.cpp  customerinfo.cpp  database.cpp  main  main.cpp  mainwindow.cpp  numpad.cpp  numpad.h  printhello.cpp  product.cpp  window.cpp
test/: CMakeLists.txt  ExampleTest  ExampleTest.cpp  ExampleTest[1]_include.cmake  ExampleTest[1]_tests.cmake
